--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,2000],[[4,5,6,7,[],[1,22,1977],[],[[8,0,0,[],[1,216,145],[]],[9,0,0,[],[1,361,137],[]],[10,0,0,[],[1,499,136],[]],[11,0,0,[],[1,635,138],[]],[12,0,0,[],[1,773,134],[]],[13,0,0,[],[1,907,130],[]],[14,0,0,[],[1,1037,141],[]],[15,0,0,[],[1,1178,286],[]],[16,0,0,[],[1,1464,393],[]],[17,0,0,[],[1,1857,141],[]]],[],[10,10,0,0]]],[],[],[10,10,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,164],[[4,5,6,7,[],[0,22,141],[],[[8,0,0,[],[0,130,6,9],[]],[10,0,0,[],[0,137,3,9],[]],[11,0,0,[],[0,140,3,9],[]],[12,0,0,[],[0,143,3,9],[]],[13,0,0,[],[0,146,3,9],[]],[14,0,0,[],[0,148,3,9],[]],[15,0,0,[],[0,151,3,9],[]],[16,0,0,[],[0,154,3,9],[]],[17,0,0,[],[0,157,3,9],[]],[18,0,0,[],[0,161,3,9],[]]],[],[10,0,10,0]]],[],[],[10,0,10,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Cases","*/__w/sessions-management/sessions-management/test/cases","*../test/cases","*Nominal","*/__w/sessions-management/sessions-management/test/cases/nominal.robot","*../test/cases/nominal.robot","*<p>A test suite for nominal registration scenarii\x3c/p>","*1.1 Ensure Registration Of 1 New Full Day Event With Full Day Conf Using Smtp Server","*1.2 Ensure Registration Of 1 New Full Day Event With Non Full Day Conf Using Smtp Server","*1.3 Ensure Registration Of 1 New Non Full Day Event With Full Day Conf Using Smtp Server","*1.4 Ensure Registration Of 1 New Non Full Day Event With Non Full Day Conf Using Smtp Server","*2.1 Ensure Coaches And Students Are Correctly Managed","*3.1 Ensure Events Selection Is Correctly Managed For Non Full Day Data","*3.2 Ensure Events Selection Is Correctly Managed For Full Day Data","*4.1 Ensure Already Registered Events Are Not Sent Back","*4.2 Ensure Updated Or New Events Are Sent","*5.1 Ensure Registration Is Only For Items Containing Topic"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cases","*/__w/sessions-management/sessions-management/test/cases","*../test/cases","*Nominal","*/__w/sessions-management/sessions-management/test/cases/nominal.robot","*../test/cases/nominal.robot","*<p>A test suite for nominal registration scenarii\x3c/p>","*1.1 Ensure Registration Of 1 New Full Day Event With Full Day Conf Using Smtp Server","*JSONDecodeError: Expecting value: line 2 column 1 (char 1)","*1.2 Ensure Registration Of 1 New Full Day Event With Non Full Day Conf Using Smtp Server","*1.3 Ensure Registration Of 1 New Non Full Day Event With Full Day Conf Using Smtp Server","*1.4 Ensure Registration Of 1 New Non Full Day Event With Non Full Day Conf Using Smtp Server","*2.1 Ensure Coaches And Students Are Correctly Managed","*3.1 Ensure Events Selection Is Correctly Managed For Non Full Day Data","*3.2 Ensure Events Selection Is Correctly Managed For Full Day Data","*4.1 Ensure Already Registered Events Are Not Sent Back","*4.2 Ensure Updated Or New Events Are Sent","*5.1 Ensure Registration Is Only For Items Containing Topic"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:02","fail":0,"label":"All Tests","pass":10,"skip":0}],[],[{"elapsed":"00:00:02","fail":0,"id":"s1","label":"Cases","name":"Cases","pass":10,"skip":0},{"elapsed":"00:00:02","fail":0,"id":"s1-s1","label":"Cases.Nominal","name":"Nominal","pass":10,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":10,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":10,"id":"s1","label":"Cases","name":"Cases","pass":0,"skip":0},{"elapsed":"00:00:00","fail":10,"id":"s1-s1","label":"Cases.Nominal","name":"Nominal","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1726180473976;
+window.output["baseMillis"] = 1726500403294;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 2005;
+window.output["generated"] = 169;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
