--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,180],[[4,5,6,7,[],[0,21,158],[],[[8,0,0,[],[0,129,23,9],[]],[10,0,0,[],[0,153,3,9],[]],[11,0,0,[],[0,156,3,9],[]],[12,0,0,[],[0,158,3,9],[]],[13,0,0,[],[0,161,3,9],[]],[14,0,0,[],[0,164,2,9],[]],[15,0,0,[],[0,167,3,9],[]],[16,0,0,[],[0,170,3,9],[]],[17,0,0,[],[0,173,3,9],[]],[18,0,0,[],[0,176,2,9],[]]],[],[10,0,10,0]]],[],[],[10,0,10,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,300],[[4,5,6,7,[],[1,22,278],[],[[8,0,0,[],[1,128,49],[]],[9,0,0,[],[1,177,7],[]],[10,0,0,[],[1,185,7],[]],[11,0,0,[],[1,192,7],[]],[12,0,0,[],[1,199,7],[]],[13,0,0,[],[1,206,16],[]],[14,0,0,[],[1,222,16],[]],[15,0,0,[],[1,238,21],[]],[16,0,0,[],[1,259,33],[]],[17,0,0,[],[1,293,7],[]]],[],[10,10,0,0]]],[],[],[10,10,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Cases","*/__w/sessions-management/sessions-management/test/cases","*../test/cases","*Nominal","*/__w/sessions-management/sessions-management/test/cases/nominal.robot","*../test/cases/nominal.robot","*<p>A test suite for nominal registration scenarii\x3c/p>","*1.1 Ensure Registration Of 1 New Full Day Event With Full Day Conf Using Smtp Server","*JSONDecodeError: Expecting value: line 2 column 1 (char 1)","*1.2 Ensure Registration Of 1 New Full Day Event With Non Full Day Conf Using Smtp Server","*1.3 Ensure Registration Of 1 New Non Full Day Event With Full Day Conf Using Smtp Server","*1.4 Ensure Registration Of 1 New Non Full Day Event With Non Full Day Conf Using Smtp Server","*2.1 Ensure Coaches And Students Are Correctly Managed","*3.1 Ensure Events Selection Is Correctly Managed For Non Full Day Data","*3.2 Ensure Events Selection Is Correctly Managed For Full Day Data","*4.1 Ensure Already Registered Events Are Not Sent Back","*4.2 Ensure Updated Or New Events Are Sent","*5.1 Ensure Registration Is Only For Items Containing Topic"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Cases","*/__w/sessions-management/sessions-management/test/cases","*../test/cases","*Nominal","*/__w/sessions-management/sessions-management/test/cases/nominal.robot","*../test/cases/nominal.robot","*<p>A test suite for nominal registration scenarii\x3c/p>","*1.1 Ensure Registration Of 1 New Full Day Event With Full Day Conf Using Smtp Server","*1.2 Ensure Registration Of 1 New Full Day Event With Non Full Day Conf Using Smtp Server","*1.3 Ensure Registration Of 1 New Non Full Day Event With Full Day Conf Using Smtp Server","*1.4 Ensure Registration Of 1 New Non Full Day Event With Non Full Day Conf Using Smtp Server","*2.1 Ensure Coaches And Students Are Correctly Managed","*3.1 Ensure Events Selection Is Correctly Managed For Non Full Day Data","*3.2 Ensure Events Selection Is Correctly Managed For Full Day Data","*4.1 Ensure Already Registered Events Are Not Sent Back","*4.2 Ensure Updated Or New Events Are Sent","*5.1 Ensure Registration Is Only For Items Containing Topic"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":10,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:00","fail":10,"id":"s1","label":"Cases","name":"Cases","pass":0,"skip":0},{"elapsed":"00:00:00","fail":10,"id":"s1-s1","label":"Cases.Nominal","name":"Nominal","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":10,"skip":0}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Cases","name":"Cases","pass":10,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"Cases.Nominal","name":"Nominal","pass":10,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1726516758877;
+window.output["baseMillis"] = 1726517035015;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 184;
+window.output["generated"] = 305;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
